--- a/agenda/src/theme/variables.scss
+++ b/agenda/src/theme/variables.scss
@@ -84,5 +84,8 @@ $colors: (
 // Fonts
 // --------------------------------------------------
 
+$fa-font-path : "../node_modules/font-awesome/fonts";
+@import "../node_modules/font-awesome/scss/font-awesome.scss";
+
 @import "roboto";
 @import "noto-sans";
